--- a/style.css
+++ b/style.css
@@ -1,1 +1,48 @@
+@font-face {
+  font-family: "NorseBold";
+  src: url("./Norse-Bolt.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
 
+fieldset {
+  padding: 0;
+  border: none;
+}
+main {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+#left {
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  max-width: 30vw;
+  display: flex;
+}
+#left img {
+  max-width: 100%;
+  height: auto;
+}
+#overlay {
+  font-family: "NorseBold", sans-serif;
+  font-size: 3rem;
+  color: white;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  max-height: 20vh;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.5);
+}
+#overlay img {
+  max-height: 15vh;
+}
+#right {
+  max-width: 70vw;
+}
